--- a/styles.css
+++ b/styles.css
@@ -110,7 +110,7 @@ header {
   margin-bottom: 88px;
   border-radius: 24px;
   padding: 32px 32px 16px 32px;
-  background-image: url('bg-gradient.svg');
+  background-image: url('assets/images/bg-gradient.svg');
 
 }
 
@@ -150,7 +150,7 @@ header {
 }
 
 .background-image {
-  background-image: url("emojibg.png");
+  background-image: url("assets/images/emojibg.png");
   background-color: transparent;
   background-repeat: no-repeat;
   background-size: contain;
