--- a/styles.css
+++ b/styles.css
@@ -121,7 +121,7 @@ header {
   margin-top: 88px;
   margin-bottom: 88px;
   padding: 32px 32px 16px 32px;
-  
+
 }
 
 .section-container-contact {
@@ -277,7 +277,7 @@ div #right-container {
 }
 
 .contact-form {
-  width:48%;
+  width: 48%;
   height: 100%;
   display: inline-block;
   padding: 0;
@@ -287,7 +287,7 @@ div #right-container {
 .contact-image {
   max-width: 48%;
   height: auto;
-  object-fit:fit-content;
+  object-fit: fit-content;
   border-radius: 16px;
   display: inline-block;
   margin-right: 32px;
@@ -311,7 +311,8 @@ div #right-container {
   border: 1.5px solid #435467;
   border-radius: 8px;
   color: white;
-  font-family: Poppins, Arial, sans-serif;;
+  font-family: Poppins, Arial, sans-serif;
+  ;
 }
 
 ::placeholder {
@@ -320,7 +321,7 @@ div #right-container {
 }
 
 #message {
-  height:96px;
+  height: 96px;
 }
 
 
