--- a/styles.css
+++ b/styles.css
@@ -99,6 +99,8 @@ header {
   margin-top: 168px;
   margin-bottom: 84px;
   padding: 16px 0;
+  color: #ffffff;
+  font-family: Poppins, Arial, sans-serif;
 }
 
 .section-container-about {
@@ -111,6 +113,8 @@ header {
   border-radius: 24px;
   padding: 32px 32px 16px 32px;
   background-image: url('assets/images/bg-gradient.svg');
+  font-family: Poppins, Arial, sans-serif;
+  color: #ffffff;
 
 }
 
@@ -121,6 +125,7 @@ header {
   margin-top: 88px;
   margin-bottom: 88px;
   padding: 32px 32px 16px 32px;
+  font-family: Poppins, Arial, sans-serif;
 
 }
 
@@ -131,6 +136,7 @@ header {
   margin-top: 88px;
   margin-bottom: 88px;
   padding: 32px 32px 16px 32px;
+  font-family: Poppins, Arial, sans-serif;
 }
 
 .social-media {
@@ -187,7 +193,7 @@ header {
   display: inline-block;
 }
 
-div #right-container {
+.right-container {
   position: absolute;
   bottom: 16px;
   right: 16px
@@ -201,11 +207,9 @@ div #right-container {
   text-transform: uppercase;
   color: white;
   padding: 16px 0;
-}
-
-#project-title {
   text-align: left;
 }
+
 
 .about-items-list {
   width: 120px;
